--- a/public/about.html
+++ b/public/about.html
@@ -22,12 +22,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
 </head>
 
 <body>
     <div class="container">
         <nav>
-            <div class="logo"><a href="index.html">Derek Brown</a></div>
+            <div class="logo">
+                <a href="index.html"><img src="logo.png"></img></a>
+            </div>
             <ul>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -40,6 +45,7 @@
                 <p>I'm a software engineer who specializes in back-end development with strong interests in cloud operations. I enjoy building, automating, and supporting things in the cloud. Some of my favorite technologies are Serverless computing, Infrastructure as Code, and Containerization. You can view some of my work on <a href="https://github.com/derekmbrown" target="_blank">GitHub</a>.</p>
                 <p>I'm currently employed at ViacomCBS doing back-end development for <a href="https://comicbook.com" target="_blank">Comicbook.com</a> and <a href="https://popculture.com" target="_blank">PopCulture.com</a> while also managing the cloud infrastructure in AWS.</p>
                 <p>I enjoy talking about things related to Apple, Star Wars, sports, hip-hop music, and software development!</p>
+                <p>Contact me <a href="contact.html">here</a>!</p>
             </div>
         </main>
 
