--- a/public/contact.html
+++ b/public/contact.html
@@ -22,12 +22,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
 </head>
 
 <body>
     <div class="container">
         <nav>
-            <div class="logo"><a href="index.html">Derek Brown</a></div>
+            <div class="logo">
+                <a href="index.html"><img src="logo.png"></img></a>
+            </div>
             <ul>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
