--- a/public/about.html
+++ b/public/about.html
@@ -45,7 +45,7 @@
                 <p>I'm a software engineer who specializes in back-end development with strong interests in cloud operations. I enjoy building, automating, and supporting things in the cloud. Some of my favorite technologies are Serverless computing, Infrastructure as Code, and Containerization. You can view some of my work on <a href="https://github.com/derekmbrown" target="_blank">GitHub</a>.</p>
                 <p>I'm currently employed at ViacomCBS doing back-end development for <a href="https://comicbook.com" target="_blank">Comicbook.com</a> and <a href="https://popculture.com" target="_blank">PopCulture.com</a> while also managing the cloud infrastructure in AWS.</p>
                 <p>I enjoy talking about things related to Apple, Star Wars, sports, hip-hop music, and software development!</p>
-                <p>View my contact info <a href="contact.html">here</a>!</p>
+                <p>View my contact info <a href="contact.html">here</a>.</p>
             </div>
         </main>
 
