Add social icons to homepage

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
+    <!-- Social icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
@@ -44,6 +47,11 @@
                 <img src="profile.jpg"></img>
                 <div class="title">Derek Brown</div>
                 <div class="subtitle">Software Engineer who enjoys DevOps</div>
+                <div class="social-icons">
+                    <a href="https://linkedin.com/in/brownderekm/" class="fa fa-linkedin" target="_blank"></a>
+                    <a href="https://github.com/derekmbrown" class="fa fa-github" target="_blank"></a>
+                    <a href="https://twitter.com/derekmbrown" class="fa fa-twitter" target="_blank"></a>
+                </div>
             </div>
         </main>
 
