--- a/public/contact.html
+++ b/public/contact.html
@@ -43,28 +43,24 @@
             <div class="contact-container">
                 <table>
                     <tr>
-                        <td class="table-row-header">Email</td>
+                        <td class="table-row-header">
+                            Email: <a href="mailto:dmbrown710@gmail.com" target="blank">dmbrown710@gmail.com</a>
+                        </td>
                     </tr>
                     <tr>
-                        <td><a href="mailto:dmbrown710@gmail.com" target="blank">dmbrown710@gmail.com</a></td>
+                        <td class="table-row-header">
+                            LinkedIn: <a href="https://www.linkedin.com/in/brownderekm" target="blank">brownderekm</a>
+                        </td>
                     </tr>
                     <tr>
-                        <td class="table-row-header">LinkedIn</td>
+                        <td class="table-row-header">
+                            GitHub: <a href="https://github.com/derekmbrown" target="blank">derekmbrown</a>
+                        </td>
                     </tr>
                     <tr>
-                        <td><a href="https://www.linkedin.com/in/brownderekm" target="blank">brownderekm</a></td>
-                    </tr>
-                    <tr>
-                        <td class="table-row-header">GitHub</td>
-                    </tr>
-                    <tr>
-                        <td><a href="https://github.com/derekmbrown" target="blank">derekmbrown</a></td>
-                    </tr>
-                    <tr>
-                        <td class="table-row-header">Twitter</td>
-                    </tr>
-                    <tr>
-                        <td><a href="https://twitter.com/derekmbrown" target="blank">@derekmbrown</a></td>
+                        <td class="table-row-header">
+                            Twitter: <a href="https://twitter.com/derekmbrown" target="blank">@derekmbrown</a>
+                        </td>
                     </tr>
                 </table>
             </div>
