Add credly link

--- a/public/about.html
+++ b/public/about.html
@@ -49,7 +49,7 @@
                     <p>View my contact info <a href="contact.html">here</a>.</p>
                 </div>
                 <header>Certifications</header>
-                <p>AWS Certified Solutions Architect - Associate | April 2020</p>
+                <p>AWS Certified Solutions Architect - Associate | <a href="https://www.credly.com/badges/fca4a464-2e57-4895-9cfa-bfecf2723b52/linked_in_profile" target="_blank">April 2020</a></p>
             </div>
         </main>
 
