Add cf functions and 404 page

--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,16 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Derek Brown</title>
-    <meta property="og:title" content="Derek Brown"/>
-    <meta property="og:url" content="https://derekbrown.io"/>
-    <meta property="og:image" content="https://derekbrown.io/profile.jpg"/>
-    <meta property="og:profile:first_name" content="Derek"/>
-    <meta property="og:profile:last_name" content="Brown"/>
-    <meta property="og:profile:gender" content="male"/>
-    <meta property="twitter:card" content="summary"/>
-    <meta property="twitter:site" content="@derekmbrown"/>
-    <meta property="twitter:title" content="Derek Brown"/>
-    <meta property="twitter:description" content="Developer profile, personal website"/>
+    <meta property="og:title" content="Derek Brown" />
+    <meta property="og:url" content="https://derekbrown.io" />
+    <meta property="og:image" content="https://derekbrown.io/profile.jpg" />
+    <meta property="og:profile:first_name" content="Derek" />
+    <meta property="og:profile:last_name" content="Brown" />
+    <meta property="og:profile:gender" content="male" />
+    <meta property="twitter:card" content="summary" />
+    <meta property="twitter:site" content="@derekmbrown" />
+    <meta property="twitter:title" content="Derek Brown" />
+    <meta property="twitter:description" content="Developer profile, personal website" />
 
     <!-- Styles -->
     <link rel="stylesheet" href="main.css">
@@ -34,11 +34,11 @@
     <div class="container">
         <nav>
             <div class="logo">
-                <a href="index.html"><img src="logo.png"></img></a>
+                <a href="/"><img src="logo.png"></img></a>
             </div>
             <ul>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/contact">Contact</a></li>
             </ul>
         </nav>
 
