--- a/public/about.html
+++ b/public/about.html
@@ -31,11 +31,11 @@
     <div class="container">
         <nav>
             <div class="logo">
-                <a href="index.html"><img src="logo.png"></img></a>
+                <a href="/"><img src="logo.png"></img></a>
             </div>
             <ul>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/contact">Contact</a></li>
             </ul>
         </nav>
 
@@ -46,7 +46,7 @@
                     <p>I'm a software engineer who specializes in back-end development with strong interests in cloud operations. I enjoy building, automating, and supporting things in the cloud. Some of my favorite technologies are Serverless computing, Infrastructure as Code, and Containerization. You can view some of my work on <a href="https://github.com/derekmbrown" target="_blank">GitHub</a>.</p>
                     <p>I'm currently employed at ViacomCBS doing back-end development for <a href="https://comicbook.com" target="_blank">Comicbook.com</a> and <a href="https://popculture.com" target="_blank">PopCulture.com</a> while also managing the cloud infrastructure in AWS.</p>
                     <p>I enjoy talking about things related to Apple, Star Wars, sports, hip-hop music, and software development!</p>
-                    <p>View my contact info <a href="contact.html">here</a>.</p>
+                    <p>View my contact info <a href="/contact">here</a>.</p>
                 </div>
                 <header>Certifications</header>
                 <p>AWS Certified Solutions Architect - Associate | <a href="https://www.credly.com/badges/fca4a464-2e57-4895-9cfa-bfecf2723b52/linked_in_profile" target="_blank">April 2020</a></p>
