--- a/public/contact.html
+++ b/public/contact.html
@@ -31,11 +31,11 @@
     <div class="container">
         <nav>
             <div class="logo">
-                <a href="index.html"><img src="logo.png"></img></a>
+                <a href="/"><img src="logo.png"></img></a>
             </div>
             <ul>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/contact">Contact</a></li>
             </ul>
         </nav>
 
