Add custom error page to cloudfront

--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
     <meta property="twitter:description" content="Developer profile, personal website"/>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://derekbrown.io/main.css">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
