--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
                 <div class="title">Derek Brown</div>
                 <div class="subtitle">Software Engineer who enjoys DevOps</div>
                 <div class="social-icons">
+                    <a href="mailto:dmbrown710@gmail.com" class="fa fa-envelope" target="blank"></a>
                     <a href="https://linkedin.com/in/brownderekm/" class="fa fa-linkedin" target="_blank"></a>
                     <a href="https://github.com/derekmbrown" class="fa fa-github" target="_blank"></a>
                     <a href="https://twitter.com/derekmbrown" class="fa fa-twitter" target="_blank"></a>
