Add tab page header

--- a/public/contact.html
+++ b/public/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Derek Brown</title>
+    <title>Derek Brown | Contact</title>
     <meta property="og:title" content="Derek Brown"/>
     <meta property="og:url" content="https://derekbrown.io"/>
     <meta property="og:image" content="https://derekbrown.io/profile.jpg"/>
