--- a/public/contact.html
+++ b/public/contact.html
@@ -16,14 +16,14 @@
     <meta property="twitter:description" content="Developer profile, personal website"/>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="https://derekbrown.io/main.css">
+    <link rel="stylesheet" href="static/css/main.css">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="static/img/favicon.ico">
 
 </head>
 
@@ -31,7 +31,7 @@
     <div class="container">
         <nav>
             <div class="logo">
-                <a href="/"><img src="logo.png"></img></a>
+                <a href="/"><img src="static/img/logo.jpg"></img></a>
             </div>
             <ul>
                 <li><a href="/about">About</a></li>
