--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,14 @@
     <meta property="twitter:description" content="Developer profile, personal website" />
 
     <!-- Styles -->
-    <link rel="stylesheet" href="https://derekbrown.io/main.css">
+    <link rel="stylesheet" href="static/css/main.css">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="static/img/favicon.ico">
 
     <!-- Social icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -34,7 +34,7 @@
     <div class="container">
         <nav>
             <div class="logo">
-                <a href="/"><img src="logo.png"></img></a>
+                <a href="/"><img src="static/img/logo.jpg"></img></a>
             </div>
             <ul>
                 <li><a href="/about">About</a></li>
@@ -44,7 +44,7 @@
 
         <main>
             <div class="index-container">
-                <img src="profile.jpg"></img>
+                <img src="static/img/profile.jpg"></img>
                 <div class="title">Derek Brown</div>
                 <div class="subtitle">Software Engineer who enjoys DevOps</div>
                 <div class="social-icons">
