Add active tab styling

--- a/public/about.html
+++ b/public/about.html
@@ -34,7 +34,7 @@
                 <a href="/"><img src="static/img/logo.jpg"></img></a>
             </div>
             <ul>
-                <li><a href="/about">About</a></li>
+                <li><a class="active-tab" href="/about">About</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
         </nav>
