--- a/public/contact.html
+++ b/public/contact.html
@@ -35,7 +35,7 @@
             </div>
             <ul>
                 <li><a href="/about">About</a></li>
-                <li><a href="/contact">Contact</a></li>
+                <li><a class="active-tab" href="/contact">Contact</a></li>
             </ul>
         </nav>
 
