Update og image value

--- a/public/contact.html
+++ b/public/contact.html
@@ -6,7 +6,7 @@
     <title>Derek Brown | Contact</title>
     <meta property="og:title" content="Derek Brown"/>
     <meta property="og:url" content="https://derekbrown.io"/>
-    <meta property="og:image" content="https://derekbrown.io/profile.jpg"/>
+    <meta property="og:image" content="https://derekbrown.io/static/img/profile.jpg"/>
     <meta property="og:profile:first_name" content="Derek"/>
     <meta property="og:profile:last_name" content="Brown"/>
     <meta property="og:profile:gender" content="male"/>
